--- a/data/index.html
+++ b/data/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html class="h-100" lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,140 +12,159 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
 
-  <body>
+  <body class="d-flex flex-column h-100">
     <hr id="ws-state" class="border border-2 opacity-100 mt-0" />
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h3 id="hostname" class="text-center"></h3>
-          <div>
-            <div>
-              <table class="table table-hover">
-                <tbody>
-                  <tr>
-                    <th><span class="labelMqtt">SSID: </span></th>
-                    <td class="text-end">
-                      <span id="ssid"></span> (<span id="rssi"></span>)
-                    </td>
-                  </tr>
-                  <tr>
-                    <th><span class="labelIp">IP: </span></th>
-                    <td class="text-end"><span id="ip"></span></td>
-                  </tr>
-                  <!--<tr>
-                    <th><span class="labelUptime">Uptime: </span></th>
-                    <td class="text-end"><span id="uptime"></span></td>
-                  </tr>-->
-                  <tr>
-                    <th><span class="labelReset">Reset: </span></th>
-                    <td class="text-end"><span id="reset"></span></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+    <main class="flex-shrink-0">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div id="hostname" class="display-6 text-center"></div>
+            <p id="desc" class="lead text-center">arduino cc1101 receiver</p>
+              <div>
+                <table class="table table-hover mb-0">
+                  <tbody>
+                    <tr>
+                      <th class="ps-3">
+                        <span class="labelMqtt">SSID: </span>
+                      </th>
+                      <td class="text-end">
+                        <span id="ssid"></span> (<span id="rssi"></span>)
+                      </td>
+                    </tr>
+                    <tr>
+                      <th class="ps-3"><span class="labelIp">IP: </span></th>
+                      <td class="text-end"><span id="ip"></span></td>
+                    </tr>
+                    <tr>
+                      <th class="ps-3">
+                        <span class="labelUptime">Uptime: </span>
+                      </th>
+                      <td class="text-end"><span id="uptime"></span></td>
+                    </tr>
+                    <tr>
+                      <th class="ps-3">
+                        <span class="labelRam">RAM: </span>
+                      </th>
+                      <td class="text-end">
+                        <span id="memfree"></span><span id="memfrag"></span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <th class="ps-3">
+                        <span class="labelReset">Reset: </span>
+                      </th>
+                      <td class="text-end"><span id="reset"></span></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
           </div>
-          <p class="text-center small"><span id="cc1101"></span></p>
         </div>
       </div>
-    </div>
+    </main>
+    <footer class="footer mt-auto py-2">
+      <div class="container text-center text-muted">
+        <span id="version"></span>
+      </div>
+    </footer>
     <script src="js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script>
+      var gateway = `ws://${window.location.hostname}/ws`;
+      var websocket;
+
+      function initWebSocket() {
+        console.log("Trying to open a WebSocket connection...");
+        websocket = new WebSocket(gateway);
+        websocket.onopen = onOpen;
+        websocket.onclose = onClose;
+        websocket.onmessage = onMessage;
+      }
+
+      function onOpen(event) {
+        console.log("Connection opened");
+        var element = document.getElementById("ws-state");
+        if (element.classList.contains("border-danger")) {
+          element.classList.remove("border-danger");
+        }
+        if (!element.classList.contains("border-success")) {
+          element.classList.add("border-success");
+        }
+      }
+
+      function onClose(event) {
+        console.log("Connection closed");
+        var element = document.getElementById("ws-state");
+        if (element.classList.contains("border-success")) {
+          element.classList.remove("border-success");
+        }
+        if (!element.classList.contains("border-danger")) {
+          element.classList.add("border-danger");
+        }
+        setTimeout(initWebSocket, 2000);
+      }
+
+      function onMessage(event) {
+        const parsedData = JSON.parse(event.data);
+        console.log("JSON: " + event.data);
+
+        // Store references to frequently accessed elements
+        const hostnameElement = document.getElementById("hostname");
+        const ipElement = document.getElementById("ip");
+        const ssidElement = document.getElementById("ssid");
+        const resetElement = document.getElementById("reset");
+        const versionElement = document.getElementById("version");
+        const uptimeElement = document.getElementById("uptime");
+        const rssiElement = document.getElementById("rssi");
+        const memFreeElement = document.getElementById("memfree");
+        const memFragElement = document.getElementById("memfrag");
+
+        if (parsedData.hostname) {
+          document.querySelector("title").textContent = parsedData.hostname;
+          hostnameElement.innerHTML = parsedData.hostname;
+        }
+        if (parsedData.ip) {
+          ipElement.innerHTML = parsedData.ip;
+        }
+        if (parsedData.ssid) {
+          ssidElement.innerHTML = parsedData.ssid;
+        }
+        if (parsedData.reset) {
+          resetElement.innerHTML = parsedData.reset;
+        }
+        if (parsedData.version) {
+          versionElement.innerHTML = '<a href="/update.html" class="">' + parsedData.version + '</a>';
+        }
+        if (parsedData.memfree) {
+          memFreeElement.innerHTML =
+            (parsedData.memfree / 1024).toFixed(2) + "KB";
+        }
+        if (parsedData.memfrag) {
+          memFragElement.innerHTML = " (" + parsedData.memfrag + "%)";
+        }
+        if (parsedData.uptime) {
+          const totalMinutes = parsedData.uptime;
+          const totalMinutesPerDay = 24 * 60;
+          const days = Math.floor(totalMinutes / totalMinutesPerDay);
+          const hours = Math.floor(
+            totalMinutes / 60 - Math.floor(totalMinutes / totalMinutesPerDay) * 24
+          );
+          const minutes = totalMinutes - (hours * 60);
+          const formattedUptime = `${days ? days + "d " : ""}${
+            hours ? hours + "h " : ""
+          }${minutes}m`;
+          uptimeElement.innerHTML = formattedUptime;
+        }
+        if (parsedData.rssi) {
+          rssiElement.innerHTML = parsedData.rssi;
+        }
+      }
+
+      window.addEventListener("load", onLoad);
+
+      function onLoad(event) {
+        initWebSocket();
+      }
+    </script>
   </body>
-  <script>
-    function formatTime(seconds) {
-      if (typeof seconds === "undefined") {
-        return "";
-      } else {
-        const minutes = Math.floor(seconds / 60);
-        const hours = Math.floor(minutes / 60);
-        const days = Math.floor(hours / 24);
-
-        const formattedDays = days > 0 ? days + "d " : "";
-        const formattedHours =
-          hours - Math.floor(hours / 24) * 24 > 0
-            ? hours - Math.floor(hours / 24) * 24 + "h "
-            : "";
-        const formattedMinutes =
-          minutes - Math.floor(minutes / 60) * 60 > 0
-            ? minutes - Math.floor(minutes / 60) * 60 + "m "
-            : "";
-        const formattedSeconds =
-          seconds >= 60 ? seconds - minutes * 60 + "s" : seconds + "s";
-
-        const formattedTime =
-          formattedDays + formattedHours + formattedMinutes + formattedSeconds;
-
-        return formattedTime;
-      }
-    }
-
-    var gateway = `ws://${window.location.hostname}/ws`;
-    var websocket;
-    function initWebSocket() {
-      console.log("Trying to open a WebSocket connection...");
-      websocket = new WebSocket(gateway);
-      websocket.onopen = onOpen;
-      websocket.onclose = onClose;
-      websocket.onmessage = onMessage; // <-- add this line
-    }
-    function onOpen(event) {
-      console.log("Connection opened");
-      var element = document.getElementById("ws-state");
-      if (element.classList.contains("border-danger")) {
-        element.classList.remove("border-danger");
-      }
-      if (!element.classList.contains("border-success")) {
-        element.classList.add("border-success");
-      }
-    }
-
-    function onClose(event) {
-      console.log("Connection closed");
-      var element = document.getElementById("ws-state");
-      if (element.classList.contains("border-success")) {
-        element.classList.remove("border-success");
-      }
-      if (!element.classList.contains("border-danger")) {
-        element.classList.add("border-danger");
-      }
-      setTimeout(initWebSocket, 2000);
-    }
-    function onMessage(event) {
-      const parsedData = JSON.parse(event.data);
-      console.log("JSON: " + event.data);
-      if (typeof parsedData.wifi !== "undefined") {
-        if (typeof parsedData.wifi.hostname !== "undefined") {
-          document.querySelector("title").textContent =
-            parsedData.wifi.hostname;
-          document.getElementById("hostname").innerHTML =
-            parsedData.wifi.hostname;
-        }
-        if (typeof parsedData.wifi.ip !== "undefined") {
-          document.getElementById("ip").innerHTML = parsedData.wifi.ip;
-        }
-        if (typeof parsedData.wifi.ssid !== "undefined") {
-          document.getElementById("ssid").innerHTML = parsedData.wifi.ssid;
-        }
-        if (typeof parsedData.wifi.reset !== "undefined") {
-          document.getElementById("reset").innerHTML = parsedData.wifi.reset;
-        }
-        if (typeof parsedData.wifi.rssi !== "undefined") {
-          document.getElementById("rssi").innerHTML = parsedData.wifi.rssi;
-        }
-      }
-      /*if (typeof parsedData.uptime !== "undefined") {
-        document.getElementById("uptime").innerHTML = formatTime(
-          parsedData.uptime
-        );
-      }*/
-      if (typeof parsedData.cc1101 !== "undefined") {
-        document.getElementById("cc1101").innerHTML = JSON.stringify(
-          parsedData.cc1101
-        );
-      }
-    }
-    window.addEventListener("load", onLoad);
-    function onLoad(event) {
-      initWebSocket();
-    }
-  </script>
 </html>
