--- a/data/index.html
+++ b/data/index.html
@@ -19,7 +19,7 @@
         <div class="row">
           <div class="col">
             <div id="hostname" class="display-6 text-center"></div>
-            <p id="desc" class="lead text-center">arduino epaper</p>
+            <p id="desc" class="lead text-center"></p>
             <div>
               <table class="table table-hover mb-0">
                 <tbody>
@@ -118,6 +118,7 @@
 
         // Store references to frequently accessed elements
         const hostnameElement = document.getElementById("hostname");
+        const descElement = document.getElementById("desc");
         const ipElement = document.getElementById("ip");
         const ssidElement = document.getElementById("ssid");
         const resetreasonElement = document.getElementById("resetreason");
@@ -131,6 +132,9 @@
         if (parsedData.hostname) {
           document.querySelector("title").textContent = parsedData.hostname;
           hostnameElement.innerHTML = parsedData.hostname;
+        }
+        if (parsedData.desc) {
+          descElement.innerHTML = parsedData.desc;
         }
         if (parsedData.ip) {
           ipElement.innerHTML = parsedData.ip;
